--- a/CryptoConnotationAnalysisKEY.ipynb
+++ b/CryptoConnotationAnalysisKEY.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ii. Finding Magnitude"
+    "## ii. Finding Connotation"
    ]
   },
   {
